--- a/src/css/index.css
+++ b/src/css/index.css
@@ -5,8 +5,15 @@
   |============================
 */
 @import url('./reset.css');
-@import url('./vite-promo.css');
 @import url('./header.css');
+@import url('./hero.css');
+/*@import url('./about-us.css');*/
+/*@import url('./our-lesson.css');*/
+/*@import url('./proposal-to-leave-application.css');*/
+/*@import url('./our-teachers.css');*/
+/*@import url('./leave-application.css');*/
+/*@import url('./reviews.css');*/
+/*@import url('./footer.css');*/
 
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
