build: added structure and mobile stylization for section our-teachers

--- a/src/partials/our-teachers.html
+++ b/src/partials/our-teachers.html
@@ -1,1 +1,87 @@
-<section>our teachers</section>
+<section class="our-teachers">
+  <div class="container">
+    <h2 class="our-teachers__title">
+      Meet our <span class="our-teachers__title--accent">teachers</span>
+    </h2>
+    <p class="our-teachers__description">
+      Discover our team of dedicated educators, committed to guiding you on your
+      journey to English proficiency with personalized and engaging instruction
+    </p>
+    <ul class="our-teachers__list">
+      <li class="our-teachers__item">
+        <div class="our-teachers__item-thumb">
+          <img
+            srcset="
+              ./img/our-teachers/teacher-1.png    1x,
+              ./img/our-teachers/teacher-1@2x.png 2x
+            "
+            src="./img/our-teachers/teacher-1.png"
+            alt="english teacher Maria"
+            loading="lazy"
+          />
+        </div>
+        <h3 class="our-teachers__item-title">Maria</h3>
+        <p class="our-teachers__item-description">
+          A seasoned linguist and our primary specialist in beginner-level
+          instruction, Maria brings warmth and patience to every class
+        </p>
+      </li>
+      <li class="our-teachers__item">
+        <div class="our-teachers__item-thumb">
+          <img
+            srcset="
+              ./img/our-teachers/teacher-2.png    1x,
+              ./img/our-teachers/teacher-2@2x.png 2x
+            "
+            src="./img/our-teachers/teacher-2.png"
+            alt="english teacher Artem"
+            loading="lazy"
+          />
+        </div>
+        <h3 class="our-teachers__item-title">Artem</h3>
+        <p class="our-teachers__item-description">
+          With his innovative teaching techniques and a focus on interactive
+          learning, Artem excels in keeping students engaged and motivated
+        </p>
+      </li>
+      <li class="our-teachers__item">
+        <div class="our-teachers__item-thumb">
+          <img
+            srcset="
+              ./img/our-teachers/teacher-3.png    1x,
+              ./img/our-teachers/teacher-3@2x.png 2x
+            "
+            src="./img/our-teachers/teacher-3.png"
+            alt="english teacher Ilona"
+            loading="lazy"
+          />
+        </div>
+        <h3 class="our-teachers__item-title">Ilona</h3>
+        <p class="our-teachers__item-description">
+          A specialist in advanced English, Ilona provides intensive
+          instruction, ensuring students gain confidence in complex language
+          tasks
+        </p>
+      </li>
+      <li class="our-teachers__item">
+        <div class="our-teachers__item-thumb">
+          <img
+            srcset="
+              ./img/our-teachers/teacher-4.png    1x,
+              ./img/our-teachers/teacher-4@2x.png 2x
+            "
+            src="./img/our-teachers/teacher-4.png"
+            alt="english teacher Volodymyr"
+            loading="lazy"
+          />
+        </div>
+        <h3 class="our-teachers__item-title">Volodymyr</h3>
+        <p class="our-teachers__item-description">
+          Our expert in English for specific purposes, Volodymyr tailors his
+          approach to meet individual career and industry-specific language
+          needs
+        </p>
+      </li>
+    </ul>
+  </div>
+</section>
