--- a/src/css/our-teachers.css
+++ b/src/css/our-teachers.css
@@ -12,6 +12,15 @@
     padding: 0 32px;
   }
 }
+@media only screen and (min-width: 1280px) {
+  .our-teachers {
+    padding: 75px 0;
+  }
+  .our-teachers .container {
+    max-width: 1280px;
+    padding: 0 64px;
+  }
+}
 /* TITLE */
 .our-teachers__title {
   margin-bottom: 16px;
@@ -23,7 +32,6 @@
 @media only screen and (min-width: 768px) {
   .our-teachers__title {
     font-size: 40px;
-    font-style: normal;
     line-height: 1.2;
     letter-spacing: -0.02em;
   }
@@ -59,6 +67,13 @@
     letter-spacing: -0.02em;
   }
 }
+@media only screen and (min-width: 768px) {
+  .our-teachers__description {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 710px;
+  }
+}
 /* SECTION LIST */
 @media only screen and (min-width: 768px) {
   .our-teachers__list {
@@ -68,6 +83,7 @@
     padding: 0 64px;
   }
 }
+
 /* SECTION LIST ITEM*/
 @media only screen and (max-width: 767.98px) {
   .our-teachers__item {
@@ -77,6 +93,11 @@
 @media only screen and (min-width: 768px) {
   .our-teachers__item {
     flex-basis: calc((100% - 32px) / 2);
+  }
+}
+@media only screen and (min-width: 1280px) {
+  .our-teachers__item {
+    flex-basis: calc((100% - (32px * 3)) / 4);
   }
 }
 /* SECTION LIST THUMB*/
