--- a/src/partials/our-teachers.html
+++ b/src/partials/our-teachers.html
@@ -13,10 +13,14 @@
         <div class="our-teachers__item-thumb">
           <img
             srcset="
-              ./img/our-teachers/teacher-1.png    1x,
-              ./img/our-teachers/teacher-1@2x.png 2x
+              ./img/our-teachers/teacher-1/teacher-1.avif    1x,
+              ./img/our-teachers/teacher-1/teacher-1@2x.avif 2x,
+              ./img/our-teachers/teacher-1/teacher-1.webp    1x,
+              ./img/our-teachers/teacher-1/teacher-1@2x.webp 2x,
+              ./img/our-teachers/teacher-1/teacher-1.png     1x,
+              ./img/our-teachers/teacher-1/teacher-1@2x.png  2x
             "
-            src="./img/our-teachers/teacher-1.png"
+            src="./img/our-teachers/teacher-1/teacher-1.png"
             alt="english teacher Maria"
             loading="lazy"
           />
@@ -31,8 +35,12 @@
         <div class="our-teachers__item-thumb">
           <img
             srcset="
-              ./img/our-teachers/teacher-2.png    1x,
-              ./img/our-teachers/teacher-2@2x.png 2x
+              ./img/our-teachers/teacher-2/teacher-2.avif    1x,
+              ./img/our-teachers/teacher-2/teacher-2@2x.avif 2x,
+              ./img/our-teachers/teacher-2/teacher-2.webp    1x,
+              ./img/our-teachers/teacher-2/teacher-2@2x.webp 2x,
+              ./img/our-teachers/teacher-2/teacher-2.png     1x,
+              ./img/our-teachers/teacher-2/teacher-2@2x.png  2x
             "
             src="./img/our-teachers/teacher-2.png"
             alt="english teacher Artem"
@@ -49,8 +57,12 @@
         <div class="our-teachers__item-thumb">
           <img
             srcset="
-              ./img/our-teachers/teacher-3.png    1x,
-              ./img/our-teachers/teacher-3@2x.png 2x
+              ./img/our-teachers/teacher-3/teacher-3.avif    1x,
+              ./img/our-teachers/teacher-3/teacher-3@2x.avif 2x,
+              ./img/our-teachers/teacher-3/teacher-3.webp    1x,
+              ./img/our-teachers/teacher-3/teacher-3@2x.webp 2x,
+              ./img/our-teachers/teacher-3/teacher-3.png     1x,
+              ./img/our-teachers/teacher-3/teacher-3@2x.png  2x
             "
             src="./img/our-teachers/teacher-3.png"
             alt="english teacher Ilona"
@@ -68,8 +80,12 @@
         <div class="our-teachers__item-thumb">
           <img
             srcset="
-              ./img/our-teachers/teacher-4.png    1x,
-              ./img/our-teachers/teacher-4@2x.png 2x
+              ./img/our-teachers/teacher-4/teacher-4.avif    1x,
+              ./img/our-teachers/teacher-4/teacher-4@2x.avif 2x,
+              ./img/our-teachers/teacher-4/teacher-4.webp    1x,
+              ./img/our-teachers/teacher-4/teacher-4@2x.webp 2x,
+              ./img/our-teachers/teacher-4/teacher-4.png     1x,
+              ./img/our-teachers/teacher-4/teacher-4@2x.png  2x
             "
             src="./img/our-teachers/teacher-4.png"
             alt="english teacher Volodymyr"
