ADD container styles & container to proposal section

--- a/src/partials/proposal-to-leave-application.html
+++ b/src/partials/proposal-to-leave-application.html
@@ -1,1 +1,3 @@
-<section>proposal to leave an application</section>
+<section>
+  <div class="container">proposal to leave an application</div>
+</section>
