--- a/src/css/main.css
+++ b/src/css/main.css
@@ -16,6 +16,12 @@
 @import url('./reviews.css');
 @import url('./footer.css');
 
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 :root {
   font-family: 'Manrope', Helvetica, Arial, sans-serif;
   font-size: 16px;
