--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -24,7 +24,13 @@ a {
   text-decoration: none;
 }
 
+input,
 button {
+  font-family: inherit;
+}
+
+button {
+  font-family: inherit;
   cursor: pointer;
 }
 
