--- a/src/css/main.css
+++ b/src/css/main.css
@@ -40,3 +40,27 @@
   padding: 0 20px;
   margin: 0 auto;
 }
+
+.accent {
+  position: relative;
+  color: var(--black);
+  text-align: center;
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 1.2;
+  letter-spacing: -0.02em;
+}
+
+.accent::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: 0;
+
+  width: 100%;
+
+  border-bottom: 20px solid var(--soft-green);
+  border-radius: 8px;
+  z-index: -1;
+}
