ADD proposal-section styles and markup

--- a/src/partials/proposal-to-leave-application.html
+++ b/src/partials/proposal-to-leave-application.html
@@ -1,6 +1,27 @@
-<section>
+<section class="proposal-section">
   <div class="container">
-    proposal to leave an application
-    <button class="button">Text</button>
+    <h2>Master the Language with Our English Package!</h2>
+    <div>
+      <h3>Power of English</h3>
+      <ul>
+        <li>
+          <h4>
+            Dive into captivating lessons designed to stimulate your curiosity.
+          </h4>
+        </li>
+        <li>
+          <h4>
+            Learn in a nurturing setting where every student's progress matters.
+          </h4>
+        </li>
+        <li>
+          <h4>
+            Experience the satisfaction of real progress as your language skills
+            and confidence grow with every session.
+          </h4>
+        </li>
+        <a href=""></a>
+      </ul>
+    </div>
   </div>
 </section>
