--- a/src/partials/our-teachers.html
+++ b/src/partials/our-teachers.html
@@ -1,16 +1,16 @@
 <!-- OUR TEACHERS -->
 <section class="our-teachers">
   <div class="container">
-    <h2 class="our-teachers__title">
-      Meet our <span class="our-teachers__title--accent">teachers</span>
+    <h2 class="our-teachers-title">
+      Meet our <span class="our-teachers-title-accent">teachers</span>
     </h2>
-    <p class="our-teachers__description">
+    <p class="our-teachers-description">
       Discover our team of dedicated educators, committed to guiding you on your
       journey to English proficiency with personalized and engaging instruction
     </p>
-    <ul class="our-teachers__list">
-      <li class="our-teachers__item">
-        <div class="our-teachers__item-thumb">
+    <ul class="our-teachers-list">
+      <li class="our-teachers-item">
+        <div class="our-teachers-item-thumb">
           <img
             srcset="
               ./img/our-teachers/teacher-1/teacher-1.avif    1x,
@@ -25,14 +25,14 @@
             loading="lazy"
           />
         </div>
-        <h3 class="our-teachers__item-title">Maria</h3>
-        <p class="our-teachers__item-description">
+        <h3 class="our-teachers-item-title">Maria</h3>
+        <p class="our-teachers-item-description">
           A seasoned linguist and our primary specialist in beginner-level
           instruction, Maria brings warmth and patience to every class
         </p>
       </li>
-      <li class="our-teachers__item">
-        <div class="our-teachers__item-thumb">
+      <li class="our-teachers-item">
+        <div class="our-teachers-item-thumb">
           <img
             srcset="
               ./img/our-teachers/teacher-2/teacher-2.avif    1x,
@@ -47,14 +47,14 @@
             loading="lazy"
           />
         </div>
-        <h3 class="our-teachers__item-title">Artem</h3>
-        <p class="our-teachers__item-description">
+        <h3 class="our-teachers-item-title">Artem</h3>
+        <p class="our-teachers-item-description">
           With his innovative teaching techniques and a focus on interactive
           learning, Artem excels in keeping students engaged and motivated
         </p>
       </li>
-      <li class="our-teachers__item">
-        <div class="our-teachers__item-thumb">
+      <li class="our-teachers-item">
+        <div class="our-teachers-item-thumb">
           <img
             srcset="
               ./img/our-teachers/teacher-3/teacher-3.avif    1x,
@@ -69,15 +69,15 @@
             loading="lazy"
           />
         </div>
-        <h3 class="our-teachers__item-title">Ilona</h3>
-        <p class="our-teachers__item-description">
+        <h3 class="our-teachers-item-title">Ilona</h3>
+        <p class="our-teachers-item-description">
           A specialist in advanced English, Ilona provides intensive
           instruction, ensuring students gain confidence in complex language
           tasks
         </p>
       </li>
-      <li class="our-teachers__item">
-        <div class="our-teachers__item-thumb">
+      <li class="our-teachers-item">
+        <div class="our-teachers-item-thumb">
           <img
             srcset="
               ./img/our-teachers/teacher-4/teacher-4.avif    1x,
@@ -92,8 +92,8 @@
             loading="lazy"
           />
         </div>
-        <h3 class="our-teachers__item-title">Volodymyr</h3>
-        <p class="our-teachers__item-description">
+        <h3 class="our-teachers-item-title">Volodymyr</h3>
+        <p class="our-teachers-item-description">
           Our expert in English for specific purposes, Volodymyr tailors his
           approach to meet individual career and industry-specific language
           needs
