EDIT container styles

--- a/src/css/proposal-to-leave-application.css
+++ b/src/css/proposal-to-leave-application.css
@@ -1,7 +1,7 @@
 .proposal-section {
-  width: 335px;
-  height: 737px;
+  /* width: 335px; */
+  /* height: 737px; */
 
   border-radius: 30px;
-  background: var(--gree-linear);
+  /* background: var(--gree-linear); */
 }
