--- a/src/css/main.css
+++ b/src/css/main.css
@@ -42,11 +42,13 @@
 }
 @media only screen and (min-width: 768px) {
   .container {
+    max-width: 768px;
     padding: 0 32px;
   }
 }
 @media only screen and (min-width: 1280px) {
   .container {
+    max-width: 1280px;
     padding: 0 64px;
   }
 }
