--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,1 +1,72 @@
-<header>header</header>
+ <header class="header" id="home">
+      <div class="header-container container" id="header-top">
+        <!-- Navigation -->
+        <a href="" class="header-logo"
+          >english<span class="header-logo-span">excellence</span>.</a
+        >
+        <nav class="header-nav">
+          <!-- Logo -->
+
+          <ul class="header-nav-list">
+            <li class="header-nav-item">
+              <a class="header-nav-link-one" href="#about-us">About us</a>
+            </li>
+            <li class="header-nav-item">
+              <a class="header-nav-link-two" href="#our-lessons">Our lessons</a>
+            </li>
+            <li class="header-nav-item">
+              <a class="header-nav-link-three" href="#teachers">Teachers</a>
+            </li>
+            <li class="header-nav-item">
+              <a class="header-nav-link-four" href="#reviews">Reviews</a>
+            </li>
+            <li class="header-nav-item">
+              <a class="header-nav-link-five" href="#leave-section"
+                >Contact Us</a
+              >
+            </li>
+          </ul>
+        </nav>
+        <ul class="header-socials list">
+          <li class="header-socials-item">
+            <a
+              class="header-socials-link link"
+              href="https://facebook.com"
+              target="_blank"
+              rel="noopener noreferrer"
+              aria-label="Facebook link"
+            >
+              <svg class="header-socials-icon" width="28" height="28">
+                <use href="./src/img/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="header-socials-item">
+            <a
+              class="header-socials-link link"
+              href="https://instagram.com"
+              target="_blank"
+              rel="noopener noreferrer"
+              aria-label="Instagram link"
+            >
+              <svg class="header-socials-icon" width="28" height="28">
+                <use href="./img/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="header-socials-item">
+            <a
+              class="header-socials-link link"
+              href="https://youtube.com"
+              target="_blank"
+              rel="noopener noreferrer"
+              aria-label="youtube link"
+            >
+              <svg class="header-socials-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-youtube"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+			</div>>
+	</header>
