--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,1 +1,16 @@
-<footer>footer</footer>
+<footer class="footer">
+  <div class="container">
+    <div class="footer-top"></div>
+    <div class="footer-bottom">
+      <p class="text">&#169;2023 English Excellence. All rights reserved.</p>
+      <ul class="footer-bottom-list">
+        <li class="footer-bottom-item">
+          <a class="link" href="" target="blank">Privacy Policy</a>
+        </li>
+        <li class="footer-bottom-item">
+          <a class="link" href="" target="blank">Terms of Service</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</footer>
