removed boilerplate code

--- a/src/partials/proposal-to-leave-application.html
+++ b/src/partials/proposal-to-leave-application.html
@@ -1,6 +1,3 @@
 <section>
-  <div class="container">
-    proposal to leave an application
-    <button class="button">Text</button>
-  </div>
+  <div class="container">proposal to leave an application</div>
 </section>
