--- a/src/partials/proposal-to-leave-application.html
+++ b/src/partials/proposal-to-leave-application.html
@@ -1,6 +1,28 @@
-<section>
+<section class="proposal-section">
   <div class="container">
-    proposal to leave an application
-    <button class="button">Text</button>
+    <h2>Proposal to leave an application</h2>
+    <strong>Master the Language with Our English Package!</strong>
+    <div>
+      <h3>Power of English</h3>
+      <ul>
+        <li>
+          <p>
+            Dive into captivating lessons designed to stimulate your curiosity.
+          </p>
+        </li>
+        <li>
+          <p>
+            Learn in a nurturing setting where every student's progress matters.
+          </p>
+        </li>
+        <li>
+          <p>
+            Experience the satisfaction of real progress as your language skills
+            and confidence grow with every session.
+          </p>
+        </li>
+        <a href="#leave-application">Leave an application</a>
+      </ul>
+    </div>
   </div>
 </section>
