--- a/src/css/main.css
+++ b/src/css/main.css
@@ -35,6 +35,20 @@
   scroll-behavior: smooth;
 }
 
+.visually-hidden {
+  position: absolute;
+  margin: -1px;
+  padding: 0;
+  width: 1px;
+  height: 1px;
+  border: 0;
+  overflow: hidden;
+  white-space: nowrap;
+  clip: rect(0 0 0 0);
+  clip-path: inset(100%);
+  -webkit-clip-path: inset(100%);
+}
+
 .container {
   max-width: 375px;
   padding: 0 20px;
