--- a/src/partials/leave-application.html
+++ b/src/partials/leave-application.html
@@ -77,19 +77,93 @@
         <div class="leave-application-form-field-teachers">
           <p class="leave-application-radio-heading">Choose a teacher:</p>
           <div class="leave-application-form-teachers">
-            <label class="leave-application-form-radio-element">
-              <input type="radio" name="choose-teacher" value="maria" /> Maria
-            </label>
-            <label class="leave-application-form-radio-element">
-              <input type="radio" name="choose-teacher" value="artem" /> Artem
-            </label>
-            <label class="leave-application-form-radio-element">
-              <input type="radio" name="choose-teacher" value="ilona" /> Ilona
-            </label>
-            <label class="leave-application-form-radio-element">
-              <input type="radio" name="choose-teacher" value="volodymr" />
-              Volodymyr
-            </label>
+            <div class="leave-application-form-radio-element">
+              <input
+                type="radio"
+                class="visually-hidden"
+                id="teacher-maria"
+                name="teacher"
+                value="maria"
+              />
+
+              <label
+                class="leave-application-form-radio-label"
+                for="teacher-maria"
+              >
+                <span class="leave-application-form-radio">
+                  <svg width="10" height="10">
+                    <use href="./img/icons.svg#icon-circle"></use>
+                  </svg>
+                </span>
+                Maria</label
+              >
+            </div>
+
+            <div class="leave-application-form-radio-element">
+              <input
+                type="radio"
+                class="visually-hidden"
+                id="teacher-artem"
+                name="teacher"
+                value="artem"
+              />
+
+              <label
+                class="leave-application-form-radio-label"
+                for="teacher-artem"
+              >
+                <span class="leave-application-form-radio">
+                  <svg width="10" height="10">
+                    <use href="./img/icons.svg#icon-circle"></use>
+                  </svg>
+                </span>
+                Artem</label
+              >
+            </div>
+
+            <div class="leave-application-form-radio-element">
+              <input
+                type="radio"
+                class="visually-hidden"
+                id="teacher-ilona"
+                name="teacher"
+                value="ilona"
+              />
+
+              <label
+                class="leave-application-form-radio-label"
+                for="teacher-ilona"
+              >
+                <span class="leave-application-form-radio">
+                  <svg width="10" height="10">
+                    <use href="./img/icons.svg#icon-circle"></use>
+                  </svg>
+                </span>
+                Ilona</label
+              >
+            </div>
+
+            <div class="leave-application-form-radio-element">
+              <input
+                type="radio"
+                class="visually-hidden"
+                id="teacher-volodymr"
+                name="teacher"
+                value="volodymr"
+              />
+
+              <label
+                class="leave-application-form-radio-label"
+                for="teacher-volodymr"
+              >
+                <span class="leave-application-form-radio">
+                  <svg width="10" height="10">
+                    <use href="./img/icons.svg#icon-circle"></use>
+                  </svg>
+                </span>
+                Volodymr</label
+              >
+            </div>
           </div>
         </div>
 
