added styled header to leave application form

--- a/src/partials/leave-application.html
+++ b/src/partials/leave-application.html
@@ -1,7 +1,12 @@
 <section class="leave-application">
   <div class="container">
     <div class="leave-application-heading">
-      <h2 class="leave-application-heading-title">Leave an application</h2>
+      <h2 class="leave-application-heading-title with-accent">
+        Leave an <span class="accent">application</span>
+      </h2>
+      <h2 class="leave-application-heading-title clean">
+        Leave an application
+      </h2>
       <p class="leave-application-heading-text">
         Please use the form below to contact us. Enter your name, email, and
         message and we'll get back to you shortly.
@@ -40,7 +45,7 @@
           /></label>
         </div>
 
-        <div class="leave-application-form-field email">
+        <div class="leave-application-form-field">
           <label>
             <input
               class="leave-application-form-input"
@@ -51,7 +56,7 @@
           /></label>
         </div>
 
-        <div class="leave-application-form-field phone">
+        <div class="leave-application-form-field">
           <label>
             <input
               class="leave-application-form-input"
@@ -176,7 +181,8 @@
 
         <p class="leave-application-form-agreement-text">
           By clicking on “Send” button, you agree to our
-          <a href="">Privacy Policy</a>,<br />
+          <a class="leave-application-form-link" href="">Privacy Policy</a
+          >,<br />
           and allow Promodo to use this information for marketing purposes.
         </p>
       </form>
