--- a/src/css/leave-application.css
+++ b/src/css/leave-application.css
@@ -17,12 +17,30 @@
   letter-spacing: -0.02em;
 }
 
+.leave-application-heading-title.with-accent {
+  display: none;
+}
+
+@media only screen and (min-width: 768px) {
+  .leave-application-heading-title.clean {
+    display: none;
+  }
+
+  .leave-application-heading-title.with-accent {
+    display: block;
+  }
+}
+
 .leave-application-heading-text {
   color: var(--soft-black);
   text-align: center;
   font-size: 14px;
   font-weight: 400;
   line-height: 1.71;
+
+  margin: 0 auto;
+
+  max-width: 709px;
 }
 
 .leave-application-content {
@@ -89,10 +107,15 @@
 
   border-radius: 12px;
   border: 1px solid var(--soft-black);
+  outline: none;
+
+  transition: border var(--animation-fast);
 }
-.leave-application-form-input:focus {
-  border-color: #4dc274;
+.leave-application-form-input:focus,
+.leave-application-form-comment:focus {
+  border-color: var(--green);
 }
+
 .leave-application-form-input::placeholder,
 .leave-application-form-comment::placeholder {
   color: var(--black);
@@ -110,6 +133,7 @@
 
   border-radius: 12px;
   border: 1px solid var(--soft-black);
+  outline: none;
 
   resize: none;
 }
@@ -150,6 +174,7 @@
   display: flex;
   align-items: center;
   gap: 9px;
+  cursor: pointer;
 }
 
 .leave-application-form-radio {
@@ -165,8 +190,9 @@
 
   fill: transparent;
 
+  cursor: pointer;
+
   transition:
-    background-color var(--animation-fast),
     fill var(--animation-fast),
     border var(--animation-fast);
 }
@@ -187,4 +213,8 @@ input[type='radio']:checked
   font-size: 12px;
   line-height: 1.33;
   font-weight: 400;
+}
+
+.leave-application-form-link {
+  text-decoration: underline;
 }
