--- a/src/css/leave-application.css
+++ b/src/css/leave-application.css
@@ -57,7 +57,7 @@
   width: 492px;
   padding-bottom: 40px;
 
-  background-color: #4dc274;
+  background-color: var(--green);
   border-radius: 30px;
 }
 
